--- a/Week2/DateTime Web Service/dateTime/WebContent/WEB-INF/web.xml
+++ b/Week2/DateTime Web Service/dateTime/WebContent/WEB-INF/web.xml
@@ -24,7 +24,7 @@
 
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
-        <url-pattern>/home</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
  
 </web-app>
